# open-rs

./: .clog.toml  .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  changelog.md  index.html  rustfmt.toml  search-index.js
.devcontainer/: devcontainer.json
.github/workflows/: cross-platform-testing.yml
etc/sublime-text/: open-rs.sublime-project
examples/: with.rs
open/: fn.that.html  index.html
src/: haiku.rs  ios.rs  lib.rs  macos.rs  main.rs  redox.rs  unix.rs  wasm32.rs  windows.rs  wsl.rs
src/open/src/: lib.rs.html
