[package]

name = "open"
version = "3.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
license = "MIT"
edition = "2018"
readme = "README.md"
description = "Open a path or URL using the program configured on the system"
repository = "https://github.com/Byron/open-rs"
keywords = ["open", "xdg-open", "start", "launch"]
include = ["src/**/*", "LICENSE.md", "README.md", "changelog.md"]

[[bin]]
test = false
doc = false
name = "open"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42", features = ["Win32_UI_Shell", "Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

[target.'cfg(all(unix, not(macos)))'.dependencies]
pathdiff = "0.2.0"
